--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Code bugs : Our team are focus on the reasons of some typical bugs">
+    <meta name="description" content="Code bugs : Our teammates are focus on the reasons of some typical bugs">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
