--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Code bugs : Our teammates are focus on the reasons of some typical bugs">
+    <meta name="description" content="Code bugs : Our team are focus on the reasons of some typical bugs">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/LMLcser/code_bugs">View on GitHub</a>
 
           <h1 id="project_title">Code bugs</h1>
-          <h2 id="project_tagline">Our team are focus on the reasons of some typical bugs</h2>
+          <h2 id="project_tagline">Our teammates are focus on the reasons of some typical bugs</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/LMLcser/code_bugs/zipball/master">Download this project as a .zip file</a>
