--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/LMLcser/code_bugs">View on GitHub</a>
 
-          <h1 id="project_title">Code bugs</h1>
-          <h2 id="project_tagline">Our teammates are focus on the reasons of some typical bugs</h2>
+          <h1 id="project_title">Code Vulnerabilities</h1>
+          <h2 id="project_tagline">Our teammates are focus on the reasons of some typical Vulnerabilities</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/LMLcser/code_bugs/zipball/master">Download this project as a .zip file</a>
@@ -34,7 +34,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#Brief-Introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Brief Intooduction</h3>
 
-<p>Our teammates     page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Our teammates are focus on the reasons of some typical Vulnerabilities.  <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
