--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/LMLcser/code_bugs">View on GitHub</a>
 
-          <h1 id="project_title">Code Vulnerabilities</h1>
+          <h1 id="project_title">代码漏洞</h1>
           <h2 id="project_tagline">Our teammates are focus on the reasons of some typical Vulnerabilities</h2>
 
             <section id="downloads">
