--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#Brief-Introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Brief Intooduction</h3>
 
-<p>Our teammates are focus on the reasons of some typical Vulnerabilities.  <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Our teammates are focus on the reasons of some typical Vulnerabilities.  <a href="https://guides.github.com/features/mastering-markdown/">useless</a>, r page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
